--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "convert:bio": "node scripts/convert-biography.js"
   },
   "dependencies": {
     "firebase": "^12.1.0",
     "framer-motion": "^12.23.12",
+    "mammoth": "^1.10.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
