--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "framer-motion": "^12.23.12",
     "mammoth": "^1.10.0",
     "next": "15.4.6",
+    "pdfjs-dist": "^5.4.149",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-pdf": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
